--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "colors.css": "^2.3.0",
     "easyrtc": "1.0.x",
     "express": "*",
     "jquery": "^2.1.4",
